date accuracy yml fix

--- a/web/modules/custom/date_accuracy/date_accuracy.info.yml
+++ b/web/modules/custom/date_accuracy/date_accuracy.info.yml
@@ -1,4 +1,5 @@
 name: "Date Accuracy"
 description: "Holds the date accuracy field"
-core_version_requirement: 10^
+core_version_requirement: ^10
 type: module
+package: "Háskólinn í Reykjavík"
