--- a/web/config/core.entity_view_display.node.album.teaser.yml
+++ b/web/config/core.entity_view_display.node.album.teaser.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.album.field_songs
     - field.field.node.album.field_spotify
     - field.field.node.album.field_tag
+    - image.style.album
     - node.type.album
   module:
     - media
@@ -24,10 +25,10 @@ mode: teaser
 content:
   field_album_cover:
     type: media_thumbnail
-    label: above
+    label: hidden
     settings:
       image_link: ''
-      image_style: ''
+      image_style: album
       image_loading:
         attribute: lazy
     third_party_settings: {  }
@@ -35,7 +36,7 @@ content:
     region: content
   field_artist:
     type: entity_reference_label
-    label: above
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
