--- a/web/config/core.entity_view_display.node.artist.default.yml
+++ b/web/config/core.entity_view_display.node.artist.default.yml
@@ -41,7 +41,7 @@ content:
     region: content
   field_dob:
     type: datetime_default
-    label: above
+    label: inline
     settings:
       timezone_override: ''
       format_type: olivero_medium
@@ -50,7 +50,7 @@ content:
     region: content
   field_dod:
     type: datetime_default
-    label: above
+    label: inline
     settings:
       timezone_override: ''
       format_type: olivero_medium
@@ -59,7 +59,7 @@ content:
     region: content
   field_member_of:
     type: entity_reference_label
-    label: above
+    label: inline
     settings:
       link: true
     third_party_settings: {  }
@@ -67,7 +67,7 @@ content:
     region: content
   field_name:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -75,7 +75,7 @@ content:
     region: content
   field_real_name:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
