--- a/web/config/core.entity_view_display.node.publisher.default.yml
+++ b/web/config/core.entity_view_display.node.publisher.default.yml
@@ -29,7 +29,7 @@ content:
     region: content
   field_dob:
     type: datetime_default
-    label: above
+    label: inline
     settings:
       timezone_override: ''
       format_type: olivero_medium
@@ -38,7 +38,7 @@ content:
     region: content
   field_dod:
     type: datetime_default
-    label: above
+    label: inline
     settings:
       timezone_override: ''
       format_type: olivero_medium
@@ -47,7 +47,7 @@ content:
     region: content
   field_name:
     type: string
-    label: above
+    label: inline
     settings:
       link_to_entity: false
     third_party_settings: {  }
